--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-uploader": "^3.7.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
